# ways49

cbf_convert/: get_data.py
model/: analysis.py  model.py  predict.py  train.py
src/: CMakeLists.txt  base.hpp  cache.hpp  evaluate.hpp  experiment.hpp  main.cpp  nnue.hpp  position.hpp  search.hpp
